# rsyslog_awslib

./: .gitignore  CMakeLists.txt  README.md  awslib.cpp  awslib.h  rsyslog_awslogs.cpp  rsyslog_awslogs.h  test.cpp
scripts/: README.md  build_and_install.sh  package_aws_sdk.sh
scripts/package_sdk/: bucket.tf  devserver.tf  instance_profile.tf  variables.tf
